--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 
     <!-- Start of  Zendesk Widget script -->
     <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7088efca-5208-4c12-9f33-fb617b40144e"> </script>
+
 <!-- End of  Zendesk Widget script -->
     <!--
       
@@ -59,5 +60,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://checkout.culqi.com/js/v4"></script>
+    <div id="fb-root"></div>
+    <script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"></script>
   </body>
 </html>
