--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Start of  Zendesk Widget script -->
-    <!-- <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7088efca-5208-4c12-9f33-fb617b40144e"> </script>-->
+  <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7088efca-5208-4c12-9f33-fb617b40144e"> </script>
 
 <!-- End of  Zendesk Widget script -->
     <!--
